src/test/deca/context/invalid/class23.deca
class A{
} 
{
    bolean a=new A();
    
}